# sql-lab-work

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg
src/sql_lab/: generate_data.py  main.py  prototype.py  select.sql
src/sql_lab.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
