[metadata]
name = sql_lab

[options]
packages = 
    sql_lab
install_requires = 
    psycopg2>=2.9.0
    SQLAlchemy>=2.0.0
    numpy>=1.26.0
    pandas>=2.1.0
python_requires = >=3.12
package_dir =
    =src
zip_safe = no

[options.extras_require]
linting = 
    ruff>=0.1

[options.package_data]
spark_lab = py.typed
